Добавлен полный цикл сборки проекта, подготовлена часть базового интерфейса программного имитатора