@@ -1,42 +1,30 @@
-import edu.sc.seis.launch4j.tasks.Launch4jExternalTask
 import edu.sc.seis.launch4j.tasks.Launch4jLibraryTask
 
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java project to get you started.
- * For more details take a look at the Java Quickstart chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.6/userguide/tutorial_java_projects.html
- */
-
 plugins {
-    // Apply the java plugin to add support for Java
     id 'java'
     id 'idea'
     id 'edu.sc.seis.launch4j' version '2.4.6'
-    // Apply the application plugin to add support for building a CLI application.
     id 'application'
 
     id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 
 dependencies {
-    // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
 
-    // Use JUnit test framework
     testImplementation 'junit:junit:4.13'
 }
 
+project.ext.version = '0.0.1-alpha'
+project.ext.name = 'capsnet-software-simulator'
+project.ext.mainClassName = 'ml.ovcorp.capsnet.simulator.App'
+
 application {
-    // Define the main class for the application.
-    mainClassName = 'ml.ovcorp.capsnet.simulator.App'
+    mainClassName = project.ext.mainClassName
 }
 
 javafx {
@@ -44,18 +32,27 @@ javafx {
     modules = [ "javafx.controls", "javafx.fxml" ]
 }
 
+jar {
+    archiveBaseName.set(project.ext.name)
+}
+
 task copyDepn(type: Copy) {
     from(configurations.runtimeClasspath)
-    into project.file('build/libs')
+    into project.file('build/libs/libs')
+}
+
+task copyJarToBin(type: Copy) {
+    from file("build/libs/" + project.ext.name + ".jar")
+    into file("build/bin")
 }
 
 task jarWithDependencies(type: Jar) {
     manifest {
-        def classPathArray = configurations.runtimeClasspath.collect { it.getName() + ' ' }
+        def classPathArray = configurations.runtimeClasspath.collect { it.getName() }
 
         def classPathResult = 'libs/' + classPathArray.join(' libs/')
 
-        attributes 'Main-Class': 'ml.ovcorp.capsnet.simulator.App'
+        attributes 'Main-Class': project.ext.mainClassName
         attributes 'Class-Path': classPathResult
     }
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
@@ -64,11 +61,11 @@ task jarWithDependencies(type: Jar) {
 
 task jarAndLibs(type: Jar) {
     manifest {
-        def classPathArray = configurations.runtimeClasspath.collect { it.getName() + ' ' }
+        def classPathArray = configurations.runtimeClasspath.collect { it.getName() }
 
         def classPathResult = 'libs/' + classPathArray.join(' libs/')
 
-        attributes 'Main-Class': 'ml.ovcorp.capsnet.simulator.App'
+        attributes 'Main-Class': project.ext.mainClassName
         attributes 'Class-Path': classPathResult
     }
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : null } }
@@ -84,8 +81,9 @@ task buildExe(type: Launch4jLibraryTask) {
     headerType = "gui"
     libraryDir = "libs"
     outputDir = "bin"
-    mainClassName = 'ml.ovcorp.capsnet.simulator.App'
+    mainClassName = project.ext.mainClassName
     outfile = "capsnss.exe"
+    version = project.ext.version
 
     Set<String> sets = new HashSet<String>()
 
@@ -94,8 +92,38 @@ task buildExe(type: Launch4jLibraryTask) {
 
     jvmOptions = sets
     // icon = "${projectDir}/src/main/resources/images/icon.ico"
-    jar = "../libs/capsnet-software-simulator.jar"
+    jar = "../libs/" + project.ext.name + ".jar"
 }
+
+task buildScripts(type: CreateStartScripts) {
+
+    outputDir = file('build/bin')
+    applicationName = project.ext.name
+    classpath = null
+
+    def classPathArray = configurations.runtimeClasspath.collect { it.getName() }
+
+    def classPathResult = 'libs/' + classPathArray.join(';libs/')
+
+    def modules = javafx.modules.join(",")
+
+    List<String> opts = new ArrayList<>()
+    opts.add('--module-path')
+    opts.add(classPathResult)
+    opts.add('--add-modules')
+    opts.add(modules)
+
+    defaultJvmOpts = opts
+    mainClass.set('-jar ' + project.ext.name + '.jar')
+}
+
+task cleanTempJar(type: Delete) {
+    delete fileTree("$buildDir/bin/libs").matching {
+        include project.ext.name + ".jar"
+    }
+}
+
+task buildAll {}
 
 sourceSets {
     main {
@@ -109,3 +137,9 @@ sourceSets {
 jarWithDependencies.dependsOn copyDepn
 jarAndLibs.dependsOn copyDepn
 buildExe.dependsOn jarAndLibs
+buildScripts.dependsOn copyJarToBin
+buildScripts.dependsOn jarAndLibs
+
+cleanTempJar.dependsOn buildScripts
+buildAll.dependsOn buildExe
+buildAll.dependsOn buildScripts
